@@ -1,3 +1,10 @@
+2006-10-09  Fernando Perez  <Fernando.Perez@colorado.edu>
+
+	* IPython/Magic.py (Magic.parse_options): add a new posix option
+	to allow parsing of input args in magics that doesn't strip quotes
+	(if posix=False).  This also closes %timeit bug reported by
+	Stefan.
+
 2006-10-03  Ville Vainio  <vivainio@gmail.com>
 
 	* iplib.py (raw_input, interact): Return ValueError catching for 
